# wowasi_ya

./: .env.example  .env.outline.example  .gitignore  ABW.11.25.md  API_SECURITY.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  FLOWCHART.md  PLAN_AI_WRITING_STYLE.md  PROMPT_ENGINEERING.md  PROMPT_ENHANCEMENT_STATUS.md  QUICKSTART.md  USERS_GUIDE.md  WEB_PORTAL_PLAN.md  WOWASI_YA_LOCAL_MODEL_EVALUATION_EXAMPLES.md  WOWASI_YA_MODEL_B_INTEGRATION.md  deploy.sh  docker-compose.outline.yml  docker-compose.portal.yml  docker-compose.yml  ecosystem.config.js  modelA_to_modelB_schema.json  pyproject.toml  rooted_communities_living.docx  test_readme_prompts.py
00-Overview/: Glossary.md  Project-Brief.md  README.md
10-Discovery/: Context-and-Background.md  Stakeholder-Notes.md
20-Planning/: Goals-and-Success-Criteria.md  Initial-Budget.md  Risks-and-Assumptions.md  Scope-and-Boundaries.md  Timeline-and-Milestones.md
30-Execution/: Process-Workflow.md  SOPs.md  Task-Backlog.md
40-Comms/: Meeting-Notes.md  Status-Updates.md
config/prompts/: prompts_model_b.yaml
docker/: Dockerfile
portal/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
portal/src/: App.tsx  index.css
portal/src/api/: client.ts
portal/src/components/: CreateProjectModal.tsx  GenerationProgress.tsx  Layout.tsx  ProgressBar.tsx  ProviderToggle.tsx  StepCard.tsx  ThemeToggle.tsx
portal/src/hooks/: useAnalytics.ts  useCreateProject.ts  useNextSteps.ts  useProjects.ts
portal/src/pages/: Analytics.tsx  Dashboard.tsx  Document.tsx  Project.tsx
portal/src/types/: index.ts
src/wowasi_ya/: __init__.py  cli.py  config.py  main.py
src/wowasi_ya/api/: __init__.py  auth.py  routes.py
src/wowasi_ya/core/: __init__.py  analytics.py  (+10 more)
static/: index.html
static/js/: app.js
templates/: claude_code_agent_strategy.md  generation_prompt.md  project_starter_kit.md  user_context.md
tests/: __init__.py  conftest.py  test_agent_discovery.py  test_api.py  test_privacy.py
(+8 files in other folders)
